Bug 321365 - Rocs always asks to save project even when no changes have been made.
Summary: Rocs always asks to save project even when no changes have been made.
Status: RESOLVED FIXED
Alias: None
Product: Rocs
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 1.8.60
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Rocs Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-19 11:30 UTC by mmellott
Modified: 2013-06-22 18:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mmellott 2013-06-19 11:30:28 UTC
A good example of this can be seen when you open Rocs and then immediately go to open an existing project. No changes have been made to the default empty project, but Rocs still raises the "Changes on your project are unsaved. Do you want to save your changes?" warning.

Reproducible: Always

Steps to Reproduce:
1. Start Rocs.
2. Try to open existing project.
Actual Results:  
"Changes on your project are unsaved. Do you want to save your changes?" warning appears.

Expected Results:  
Open file dialogue appears.
Comment 1 Christoph Feck 2013-06-19 11:44:16 UTC
I see the reverse behavior with today's master. Opening Rocs, adding random nodes, then Quit, it will quit without asking to save.
Comment 2 mmellott 2013-06-19 14:45:05 UTC
Christoph Feck, just built today's master and tried "Opening Rocs, adding random nodes, and then Quit". Rocs asked me to save before it would quit. Cannot reproduce the behaviour you mentioned.
Comment 3 mmellott 2013-06-19 14:45:37 UTC
(In reply to comment #1)
> I see the reverse behavior with today's master. Opening Rocs, adding random
> nodes, then Quit, it will quit without asking to save.

Christoph Feck, just built today's master and tried "Opening Rocs, adding random nodes, and then Quit". Rocs asked me to save before it would quit. Cannot reproduce the behaviour you mentioned.
Comment 4 Andreas Cord-Landwehr 2013-06-22 18:10:37 UTC
Git commit b5038a833d4ccd1a8a4a7c8e0c7a01cabf40d708 by Andreas Cord-Landwehr.
Committed on 22/06/2013 at 17:19.
Pushed by cordlandwehr into branch 'master'.

Do not ask to save unmodified/empty projects.

M  +15   -13   App/Ui/JournalEditorWidget.cpp
M  +2    -0    App/Ui/MainWindow.cpp
M  +5    -28   RocsCore/Project.cpp
M  +5    -0    RocsCore/Project.h

http://commits.kde.org/rocs/b5038a833d4ccd1a8a4a7c8e0c7a01cabf40d708
Comment 5 Andreas Cord-Landwehr 2013-06-22 18:10:39 UTC
Git commit 76d0ffda526048a30654995715283b18af5db3f5 by Andreas Cord-Landwehr.
Committed on 22/06/2013 at 18:05.
Pushed by cordlandwehr into branch 'master'.

Query close for Quit action.

Simplify query for closing unsaved project and connect Quit
standard action to query.

M  +30   -42   App/Ui/MainWindow.cpp
M  +6    -1    App/Ui/MainWindow.h

http://commits.kde.org/rocs/76d0ffda526048a30654995715283b18af5db3f5