Do not ask to save unmodified/empty projects.

BUG: 321365